--- a/helloworld/config.toml
+++ b/helloworld/config.toml
@@ -3,6 +3,11 @@ languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "gohugoioTheme"
 
+#CUSTOM PARAMS
+[params]
+    flex_box_interior_classes = "flex-auto w-100 w-40-l mr3 mb3 bg-white ba b--moon-gray nested-copy-line-height"
+
+
 ######## GLOBAL ITEMS TO BE SHARED WITH THE HUGO SITES
 
 [[menu.global]]
